--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     
     <div class="slideshow-container">
 
+      <div id="leiras">
+      </div>
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
           <img src="images/hegy.jpg" id="kep">
@@ -51,19 +53,34 @@
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
       <br>
-      
-      <div style="text-align:center" id="thumbs">
+
+
+    <div id="kozep">
+      <div id="kepek1">
         <img src="images/hegy.jpg" onclick="currentSlide(1)" id="kep1"> 
         <div class="title">Something hidden</div>
+      </div>
+
+      <div id="kepek2">
         <img src="images/hegy2.jpg" onclick="currentSlide(2)" id="kep1"> 
         <div class="title2">Something hidden</div>
+      </div>
+
+      <div id="kepek3">
         <img src="images/hegy3.jpg" onclick="currentSlide(3)" id="kep1"> 
         <div class="title3">Something hidden</div>
+      </div>
+
+      <div id="kepek4">
         <img src="images/hegy4.jpg" onclick="currentSlide(4)" id="kep1"> 
         <div class="title4">Something hidden</div>
+      </div>
+
+      <div id="kepek5">
         <img src="images/hegy5.jpg" onclick="currentSlide(5)" id="kep1"> 
         <div class="title5">Something hidden</div>
       </div>
+    </div>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
